--- a/client/pages/showCamps/showCamps.wxml
+++ b/client/pages/showCamps/showCamps.wxml
@@ -1,7 +1,21 @@
 <!--pages/showCamps/showCamps.wxml-->
-<view class="v-title">
-  <text class="t-title">{{message}}</text>
-  <view wx:for="{{items}}" wx:key="id" wx:for-item="itemName">
-    {{itemName.id}}:{{itemName.title}}
+<view class="page">
+  <view class="page__bd page__bd_spacing">
+    <view class="v-title">
+      <text class="t-title">{{message}}</text>
+      <view wx:for="{{items}}" wx:key="id" wx:for-item="itemName">
+        <view bindtap="click" id="{{itemName.id}}">
+          {{itemName.id}}:{{itemName.title}}
+        </view>
+      </view>
+    </view>
+    <view class="weui-flex action-btn-container">
+      <view class="weui-flex__item">
+        <button class="weui-btn action-btn" type="primary" plain="true">创建wbb</button>
+      </view>
+      <view class="weui-flex__item">
+        <button class="weui-btn action-btn" type="primary" plain="true">添加wbb</button>
+      </view>
+    </view>
   </view>
 </view>
