--- a/client/pages/showCamps/showCamps.wxml
+++ b/client/pages/showCamps/showCamps.wxml
@@ -3,10 +3,13 @@
   <view class="page__bd page__bd_spacing">
     <view class="v-title">
       <text class="t-title">{{message}}</text>
-      <view wx:for="{{items}}" wx:key="id" wx:for-item="itemName">
-         <view class="weui-cells__title"  bindtap="click" id="{{itemName.id}}">
-          {{itemName.title}}
-         </view>
+      <view wx:for="{{items}}" wx:key="wbb_id" wx:for-item="itemName">
+        <view class="weui-cells weui-cells_after-title" bindtap="click" id="{{itemName.wbb_id}}">
+          <view class="weui-cell">
+            <view class="weui-cell__bd"> {{itemName.wbb_title}}</view>
+            <view class="weui-cell__ft">{{itemName.wbb_create_time}}</view>
+          </view>
+        </view>
         <!-- <view bindtap="click" id="{{itemName.id}}">
           {{itemName.id}}:{{itemName.title}}
         </view> -->
